--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,7 @@ migrate_working_dir/
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
+# VS Code
 #.vscode/
 
 # Flutter/Dart/Pub related
@@ -39,7 +37,30 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
+# Android Studio builds
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+#############################
+# LARAVEL SECTION
+#############################
+
+# Vendor directory (tetap di-ignore)
+vendor/
+
+# Cache, logs, framework files (tetap di-ignore)
+bootstrap/cache/*
+!bootstrap/cache/.gitignore
+
+storage/*
+!storage/app/
+!storage/app/public/
+!storage/logs/
+!storage/logs/.gitignore
+!storage/framework/
+!storage/framework/.gitignore
+!storage/framework/sessions/
+!storage/framework/views/
+!storage/framework/cache/
