--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  http: ^0.13.6
+  http:
   flutter:
     sdk: flutter
-  carousel_slider: ^5.0.0
-  shared_preferences: ^2.2.2
-  image_picker: ^1.0.7
+  carousel_slider:
+  shared_preferences:
+  image_picker:
   get:
+  fl_chart:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
