--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   image_picker:
   get:
   fl_chart:
+  permission_handler:
+  flutter_launcher_icons:
+
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/icon/icon.png"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
